fixing z-index positioning
fixing z-index positioning

--- a/src/BottomCarousel.css
+++ b/src/BottomCarousel.css
@@ -1,6 +1,6 @@
 .halfMoon {
     opacity:.5;
-    z-index:3;
+    z-index:2;
     height: 680px;
     width: 680px;
     position: relative;
